--- a/plots/for_ccake/run.cfg
+++ b/plots/for_ccake/run.cfg
@@ -2,7 +2,13 @@ tau_0 1.0     # fm/c
 tau_f 5.0     # fm/c
 tau_step 0.5  # fm/c
 temp_0 0.200  # GeV
-mu_0 0.050    # GeV
+muB_0 0.050    # GeV
+muS_0 0.050    # GeV
+muQ_0 0.050    # GeV
+ceos_temp_0 0.200  # GeV
+ceos_muB_0 0.050    # GeV
+ceos_muS_0 0.050    # GeV
+ceos_muQ_0 0.050    # GeV
 pi_0 0.0      # ---
 tolerance 1e-12
 output_dir ./
