--- a/plots/for_ccake/run.cfg
+++ b/plots/for_ccake/run.cfg
@@ -1,14 +1,14 @@
 tau_0 1.0     # fm/c
-tau_f 5.0     # fm/c
-tau_step 0.5  # fm/c
+tau_f 10.0     # fm/c
+tau_step 0.1  # fm/c
 temp_0 0.250  # GeV
-muB_0 0.001   # GeV
-muS_0 0.001   # GeV
-muQ_0 0.001   # GeV
-ceos_temp_0 1.000   # GeV
-ceos_muB_0 1.000    # GeV
-ceos_muS_0 1.000    # GeV
-ceos_muQ_0 1.000    # GeV
+muB_0 0.050    # GeV
+muS_0 0.000    # GeV
+muQ_0 0.000    # GeV
+ceos_temp_0 1.000  # GeV
+ceos_muB_0 1.00    # GeV
+ceos_muS_0 1.00    # GeV
+ceos_muQ_0 1.00    # GeV
 pi_0 0.0      # ---
 tolerance 1e-12
-output_dir ./
+output_dir ./tau0_1p0_mu0_50_T0_250_long
