Update how initial conditions are generated

--- a/plots/for_ccake/run.cfg
+++ b/plots/for_ccake/run.cfg
@@ -1,6 +1,12 @@
 tau_0 1.0     # fm/c
 tau_f 3.0     # fm/c
 tau_step 0.10 # fm/c
+x_min -5.0    # fm
+x_max 5.0     # fm
+x_step 0.025  # fm
+y_min -5.0    # fm
+y_max 5.0     # fm
+y_step 0.025  # fm
 temp_0 0.250  # GeV
 muB_0 0.050    # GeV
 muS_0 0.000    # GeV
